--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 
 .DS_Store
+.README.md.icloud
+vJNUC2020/.JNUC 2020 -Github Gallery - logCollection.key.icloud
+vJNUC2020/.JNUC 2020 -Github Gallery - logCollection.pdf.icloud
